# arknights-api

./: Cargo.toml  Dockerfile  README.md
docs/: README.md  _sidebar.md  api.md
entity/: Cargo.toml
entity/src/: lib.rs  operator.rs  position.rs  profession.rs  sub_profession.rs
entity/src/enemy/: attr.rs  dmg.rs  immune.rs  level.rs  mod.rs  race.rs
entity/src/operator/: mod.rs  position.rs  profession.rs  sub_profession.rs
error/: Cargo.toml
error/src/: lib.rs
server/: Cargo.toml
server/src/: home.rs  lib.rs  migrate.rs  state.rs  update.rs
server/src/enemy/: query.rs
server/src/operator/: query.rs
server/src/resource/: avatar.rs  building_skill.rs  enemy.rs  item.rs  item_rarity.rs  map.rs  mod.rs  portrait.rs  skill.rs  skin.rs
service/: Cargo.toml
service/src/: lib.rs
service/src/enemy/: mod.rs  mutation.rs  query.rs
service/src/migration/: enemy.rs  mod.rs  operator.rs  utils.rs
service/src/operator/: mod.rs  mutation.rs  query.rs
service/src/resource/: fs.rs  git.rs  mod.rs  version.rs
src/: main.rs
