[package]
name = "arknights-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "error", "server", "service"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
error = { path = "error" }
server = { path = "server" }
service = { path = "service" }

log = "0.4.22"
rand = "0.8.5"
dotenv = "0.15.0"
env_logger = "0.11.5"
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["full"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
