[package]
name = "error"
version = "0.1.0"
edition = "2021"

[lib]
name = "error"
path = "src/lib.rs"

[dependencies]
regex = "1.10.6"
serde_json = "1.0.127"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
